Added breed list

--- a/chicken.html
+++ b/chicken.html
@@ -68,5 +68,22 @@
             vero magnam esse id dicta cum aut quaerat fugiat cupiditate!
             Assumenda similique nihil illo, voluptate placeat laudantium qui?
         </p>
+        <h2>Breeds Of Chickens</h2>
+        <ul>
+            <li>
+                Bantam
+                <ul>
+                    <li>Silkie</li>
+                    <li>Polish</li>
+                </ul>
+            </li>
+            <li>
+                Standard
+                <ul>
+                    <li>Easter Egger</li>
+                    <li>Rhode Island Red</li>
+                </ul>
+            </li>
+        </ul>
     </body>
 </html>
