--- a/chicken.html
+++ b/chicken.html
@@ -5,18 +5,21 @@
     </head>
     <body>
         <h1>Chicken</h1>
+        <a href="http://www.google.com">I am A link to google</a>
+        <a href="about.html">ABOUT PAGE</a>
 
         <p>
             The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the
-            red junglefowl, is a type of domesticated fowl, originally from
-            Asia. Rooster or cock is a term for an adult male bird. A younger
-            male may be called a cockerel; a male that has been castrated is a
-            capon. The adult female bird is called a hen. "Chicken" was
-            originally a term only for an immature, or at least young, bird, but
-            thanks to its usage on restaurant menus has now become the most
-            common term for the subspecies in general, especially in American
-            English. In older sources common fowl or domestic fowl were
-            typically used for this.
+            red junglefowl, is a type of domesticated
+            <a href="https://en.wikipedia.org/wiki/Fowl">fowl</a> , originally
+            from Asia. Rooster or cock is a term for an adult male bird. A
+            younger male may be called a cockerel; a male that has been
+            castrated is a capon. The adult female bird is called a hen.
+            "Chicken" was originally a term only for an immature, or at least
+            young, bird, but thanks to its usage on restaurant menus has now
+            become the most common term for the subspecies in general,
+            especially in American English. In older sources common fowl or
+            domestic fowl were typically used for this.
         </p>
 
         <p>
