--- a/chicken.html
+++ b/chicken.html
@@ -5,6 +5,12 @@
     </head>
     <body>
         <h1>Chicken</h1>
+
+        <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Alectura_lathami_-_Centenary_Lakes.jpg/220px-Alectura_lathami_-_Centenary_Lakes.jpg"
+            alt="A picture of a chicken"
+        />
+
         <a href="http://www.google.com">I am A link to google</a>
         <a href="about.html">ABOUT PAGE</a>
 
