--- a/chicken.html
+++ b/chicken.html
@@ -4,95 +4,117 @@
         <title>Chicken - FirstDocument</title>
     </head>
     <body>
-        <h1>Chicken</h1>
+        <nav>
+            <ul>
+                <li><a href="hom">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>Chicken</h1>
 
-        <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Alectura_lathami_-_Centenary_Lakes.jpg/220px-Alectura_lathami_-_Centenary_Lakes.jpg"
-            alt="A picture of a chicken"
-        />
+            <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Alectura_lathami_-_Centenary_Lakes.jpg/220px-Alectura_lathami_-_Centenary_Lakes.jpg"
+                alt="A picture of a chicken"
+            />
 
-        <a href="http://www.google.com">I am A link to google</a>
-        <a href="about.html">ABOUT PAGE</a>
+            <a href="http://www.google.com">I am A link to google</a>
+            <a href="about.html">ABOUT PAGE</a>
 
-        <p>
-            The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the
-            red junglefowl, is a type of domesticated
-            <a href="https://en.wikipedia.org/wiki/Fowl">fowl</a> , originally
-            from Asia. Rooster or cock is a term for an adult male bird. A
-            younger male may be called a cockerel; a male that has been
-            castrated is a capon. The adult female bird is called a hen.
-            "Chicken" was originally a term only for an immature, or at least
-            young, bird, but thanks to its usage on restaurant menus has now
-            become the most common term for the subspecies in general,
-            especially in American English. In older sources common fowl or
-            domestic fowl were typically used for this.
-        </p>
+            <p>
+                The <b>chicken</b> (Gallus gallus domesticus), a subspecies of
+                the red junglefowl, is a type of domesticated
+                <a href="https://en.wikipedia.org/wiki/Fowl">fowl</a> ,
+                originally from Asia. Rooster or cock is a term for an adult
+                male bird. A younger male may be called a cockerel; a male that
+                has been castrated is a capon. The adult female bird is called a
+                hen. "Chicken" was originally a term only for an immature, or at
+                least young, bird, but thanks to its usage on restaurant menus
+                has now become the most common term for the subspecies in
+                general, especially in American English. In older sources common
+                fowl or domestic fowl were typically used for this.
+            </p>
 
-        <p>
-            Originally raised for cockfighting or for special ceremonies,
-            chickens were not kept for food until the Hellenistic period
-            (4th–2nd centuries BCE).[1][2] Humans now keep chickens primarily as
-            a source of food (consuming both their meat and eggs) and as pets.
-        </p>
+            <p>
+                Originally raised for cockfighting or for special ceremonies,
+                chickens were not kept for food until the Hellenistic period
+                (4th–2nd centuries BCE).[1][2] Humans now keep chickens
+                primarily as a source of food (consuming both their meat and
+                eggs) and as pets.
+            </p>
+            <section>
+                <h2>Terminology</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Numquam distinctio quisquam iusto? Repellendus quia fugit
+                    sapiente dicta, a vitae suscipit odio, adipisci neque nam
+                    non hic alias numquam iste iusto?Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Non illo laudantium omnis
+                    doloremque commodi eius veniam libero. Placeat non aperiam
+                    ea ut! Optio, obcaecati alias quod corrupti ea vitae minus?
+                    Doloribus maiores modi doloremque sunt rem suscipit
+                    blanditiis molestias illum, maxime esse repudiandae
+                    dignissimos dicta. Doloribus iusto, magnam odit pariatur
+                    similique velit ad aliquid possimus natus quisquam quo
+                    maiores. Fuga. Porro nobis quae nulla, quo quisquam,
+                    possimus error ipsam amet sit voluptates alias nam esse
+                    corrupti hic neque ullam nisi aliquam! Possimus nihil atque
+                    placeat nesciunt, error voluptates illo et. Perferendis qui
+                    minima itaque dolore aliquid corrupti quod esse magni
+                    voluptate necessitatibus excepturi debitis in iure
+                    reiciendis saepe, fugiat inventore fuga explicabo ut
+                    asperiores quidem, aut animi. Sed, inventore quia. Rerum
+                    accusamus consectetur reiciendis aut vel quae eos
+                    consequuntur delectus. Assumenda pariatur modi, temporibus
+                    asperiores aspernatur dolores explicabo omnis vel totam
+                    molestiae dolor. Magni consectetur ut natus, maiores
+                    officiis ratione?
+                </p>
+            </section>
 
-        <h2>Terminology</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-            distinctio quisquam iusto? Repellendus quia fugit sapiente dicta, a
-            vitae suscipit odio, adipisci neque nam non hic alias numquam iste
-            iusto?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non
-            illo laudantium omnis doloremque commodi eius veniam libero. Placeat
-            non aperiam ea ut! Optio, obcaecati alias quod corrupti ea vitae
-            minus? Doloribus maiores modi doloremque sunt rem suscipit
-            blanditiis molestias illum, maxime esse repudiandae dignissimos
-            dicta. Doloribus iusto, magnam odit pariatur similique velit ad
-            aliquid possimus natus quisquam quo maiores. Fuga. Porro nobis quae
-            nulla, quo quisquam, possimus error ipsam amet sit voluptates alias
-            nam esse corrupti hic neque ullam nisi aliquam! Possimus nihil atque
-            placeat nesciunt, error voluptates illo et. Perferendis qui minima
-            itaque dolore aliquid corrupti quod esse magni voluptate
-            necessitatibus excepturi debitis in iure reiciendis saepe, fugiat
-            inventore fuga explicabo ut asperiores quidem, aut animi. Sed,
-            inventore quia. Rerum accusamus consectetur reiciendis aut vel quae
-            eos consequuntur delectus. Assumenda pariatur modi, temporibus
-            asperiores aspernatur dolores explicabo omnis vel totam molestiae
-            dolor. Magni consectetur ut natus, maiores officiis ratione?
-        </p>
-
-        <h2>General biology and habitat</h2>
-        <h3>Behavior</h3>
-        <h4>Social behaviour</h4>
-        <h4>Broodiness</h4>
-        <h5>I am h5</h5>
-        <h6>I am h6</h6>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            quisquam cum ratione sunt atque illum ipsa expedita assumenda unde
-            non, vero totam omnis mollitia deleniti quam nihil magnam ad aut?
-            Reiciendis molestiae unde asperiores odit sapiente, architecto
-            excepturi veritatis beatae iste! Quos aspernatur, molestias,
-            recusandae quae temporibus nostrum illum at repellat nihil
-            necessitatibus eum. Fugit, quidem quod. Ipsum, fuga ipsam? Minus ad
-            libero, ratione corporis ullam odio iusto est eveniet tempore atque
-            vero magnam esse id dicta cum aut quaerat fugiat cupiditate!
-            Assumenda similique nihil illo, voluptate placeat laudantium qui?
-        </p>
-        <h2>Breeds Of Chickens</h2>
-        <ul>
-            <li>
-                Bantam
-                <ul>
-                    <li>Silkie</li>
-                    <li>Polish</li>
-                </ul>
-            </li>
-            <li>
-                Standard
-                <ul>
-                    <li>Easter Egger</li>
-                    <li>Rhode Island Red</li>
-                </ul>
-            </li>
-        </ul>
+            <h2>General biology and habitat</h2>
+            <h3>Behavior</h3>
+            <h4>Social behaviour</h4>
+            <h4>Broodiness</h4>
+            <h5>I am h5</h5>
+            <h6>I am h6</h6>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+                quisquam cum ratione sunt atque illum ipsa expedita assumenda
+                unde non, vero totam omnis mollitia deleniti quam nihil magnam
+                ad aut? Reiciendis molestiae unde asperiores odit sapiente,
+                architecto excepturi veritatis beatae iste! Quos aspernatur,
+                molestias, recusandae quae temporibus nostrum illum at repellat
+                nihil necessitatibus eum. Fugit, quidem quod. Ipsum, fuga ipsam?
+                Minus ad libero, ratione corporis ullam odio iusto est eveniet
+                tempore atque vero magnam esse id dicta cum aut quaerat fugiat
+                cupiditate! Assumenda similique nihil illo, voluptate placeat
+                laudantium qui?
+            </p>
+            <h2>Breeds Of Chickens</h2>
+            <ul>
+                <li>
+                    Bantam
+                    <ul>
+                        <li>Silkie</li>
+                        <li>Polish</li>
+                    </ul>
+                </li>
+                <li>
+                    Standard
+                    <ul>
+                        <li>Easter Egger</li>
+                        <li>Rhode Island Red</li>
+                    </ul>
+                </li>
+            </ul>
+        </main>
+        <footer>
+            <p>This is my website</p>
+            <ul>
+                <li><a href="ad">Contact</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
