--- a/heaviest_birds.html
+++ b/heaviest_birds.html
@@ -9,30 +9,69 @@
     <body>
         <h1>Heaviest Birds</h1>
         <table>
-            <tr>
-                <th>Animal</th>
-                <th>Average mass</th>
-                <th>Maximum mass</th>
-                <th>Flighted</th>
-            </tr>
-            <tr>
-                <td>Ostrish</td>
-                <td>104kg</td>
-                <td>156kg</td>
-                <td>No</td>
-            </tr>
-            <tr>
-                <td>Somali Ostrish</td>
-                <td>90kg</td>
-                <td>130kg</td>
-                <td>No</td>
-            </tr>
-            <tr>
-                <td>Wild Turkey</td>
-                <td>13.5kg</td>
-                <td>39kg</td>
-                <td>Yes</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Animal</th>
+                    <th>Average mass</th>
+                    <th>Maximum mass</th>
+                    <th>Flighted</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Ostrish</td>
+                    <td>104kg</td>
+                    <td>156kg</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Somali Ostrish</td>
+                    <td>90kg</td>
+                    <td>130kg</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Wild Turkey</td>
+                    <td>13.5kg</td>
+                    <td>39kg</td>
+                    <td>Yes</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>v2</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th rowspan="2">Animal</th>
+                    <th colspan="2">Average Mass</th>
+                    <th rowspan="2">Flighted</th>
+                </tr>
+                <tr>
+                    <th>KG</th>
+                    <th>LB</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Ostrish</td>
+                    <td>104</td>
+                    <td>230</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Somali Ostrish</td>
+                    <td>90</td>
+                    <td>200</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Wild Turkey</td>
+                    <td>13.5</td>
+                    <td>29.8</td>
+                    <td>Yes</td>
+                </tr>
+            </tbody>
         </table>
     </body>
 </html>
