--- a/forms.html
+++ b/forms.html
@@ -8,5 +8,12 @@
     </head>
     <body>
         <h1>Forms Demo</h1>
+
+        <form action="/tacos">
+            <input type="text" placeholder="username" />
+            <input type="password" placeholder="password" />
+            <input type="color" />
+            <input type="number" placeholder="enter a number" />
+        </form>
     </body>
 </html>
