--- a/forms.html
+++ b/forms.html
@@ -12,7 +12,12 @@
         <form action="/tacos">
             <p>
                 <label for="username">Enter a Username:</label>
-                <input id="username" type="text" placeholder="username" />
+                <input
+                    id="username"
+                    type="text"
+                    placeholder="username"
+                    name="username"
+                />
             </p>
             <p>
                 <label for="password">Enter a Password:</label>
@@ -22,8 +27,11 @@
                 <label for="color">Enter a Color:</label>
                 <input id="color" type="color" />
             </p>
-            <label for="number">Enter a Number:</label>
-            <input id="number" type="number" placeholder="enter a number" />
+            <p>
+                <label for="number">Enter a Number:</label>
+                <input id="number" type="number" placeholder="enter a number" />
+            </p>
+            <button>Submit</button>
         </form>
     </body>
 </html>
