--- a/forms.html
+++ b/forms.html
@@ -46,5 +46,29 @@
             <input type="text" name="search_query" />
             <button>Search Youtube</button>
         </form>
+
+        <h2>More Inputs</h2>
+        <form action="">
+            <input type="checkbox" name="agree_tos" id="agree" checked />
+            <label for="agree">I agree to everything</label>
+            <p>
+                <label for="xs">x-small</label>
+                <input type="radio" name="size" id="xs" value="x-small" />
+                <label for="s">small</label>
+                <input type="radio" name="size" id="s" value="small" />
+                <label for="m">medium</label>
+                <input type="radio" name="size" id="m" value="medium" />
+            </p>
+
+            <p>
+                <label for="meal">Please Select an Entree</label>
+                <select name="meal" id="meal">
+                    <option value="fish">Fish</option>
+                    <option value="veg" selected>Vegetarian</option>
+                    <option value="steak">Steak</option>
+                </select>
+            </p>
+            <button>Submit</button>
+        </form>
     </body>
 </html>
