added range and textarea

--- a/forms.html
+++ b/forms.html
@@ -68,6 +68,27 @@
                     <option value="steak">Steak</option>
                 </select>
             </p>
+            <p>
+                <label for="cheese">Amount of Cheese</label>
+                <input
+                    type="range"
+                    name="cheese_level"
+                    id="cheese"
+                    min="1"
+                    max="10"
+                />
+            </p>
+
+            <p>
+                <label for="req">Any Special requests?</label>
+                <textarea
+                    name="req"
+                    id="req"
+                    cols="30"
+                    rows="10"
+                    placeholder="Special Requests"
+                ></textarea>
+            </p>
             <button>Submit</button>
         </form>
     </body>
