--- a/forms.html
+++ b/forms.html
@@ -114,5 +114,44 @@
             </p>
             <button>Submit</button>
         </form>
+
+        <h1>Race Registration!</h1>
+        <form action="/dummy">
+            <div>
+                <label for="firstname">First Name</label>
+                <input type="text" name="first_name" id="firstname" required />
+                <label for="last">Last Name</label>
+                <input type="text" name="last_name" id="last" required />
+            </div>
+            <p>Select a Race:</p>
+            <div>
+                <input type="radio" name="race" id="fun" />
+                <label for="fun">Fun Run 5k</label>
+            </div>
+            <div>
+                <input type="radio" name="race" id="half" />
+                <label for="half">Half Marathon</label>
+            </div>
+            <div>
+                <input type="radio" name="race" id="full" />
+                <label for="full">Full Marathon</label>
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required />
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" required />
+            </div>
+            <div>
+                <label for="age">Select Age Group</label>
+                <select name="age" id="age">
+                    <option value="under">Under 18</option>
+                    <option value="18-30">18-30</option>
+                    <option value="30-50">30-50</option>
+                    <option value="50+">50+</option>
+                </select>
+            </div>
+            <button>Register!</button>
+        </form>
     </body>
 </html>
